    Feature: modified cstacks so that when a sample locus matches two or more catalog loci, those catalog
             loci are combined, or rolled-up, reducing undermerged loci that generate excess homozygote calls.
    Feature: modified tsv2bam so that when two loci from the same sample match the same catalog locus, those
             loci are combined.

Stacks 2.0 Beta 10 - Apr 10, 2018
---------------------------------
    Feature: Improved gapped alignment for secondary reads in ustacks.
    Feature: Improved populations performance.
    Feature: Added enzymes Cac8I, MslI.
    Feature: Made population maps more tolerant to spurious extra spaces and lines.
    Feature: populations: VCF output: changed the format of the catalog locus field and made the column 1-based.
    Feature: gstacks: increased haplotyping rates by adding a filtering of spurious SNPs step.
    Bugfix:  Fixed populations dramatric slow-down on datasets with more than several hundred samples.
    Bugfix:  Restored the NS/locus distribution in populations's distributions log.
    Bugfix:  Fixed the populations --radpainter export.
    Bugfix:  stacks-dist-extract: Fixed OSX compatibility.
    Bugfix:  Fixed breaking bug in populations --in-vcf mode filtering statistics.

Stacks 2.0 Beta 9 - Mar 12, 2018
--------------------------------
    Feature: Cleaned up tags/snps/alleles/matches files. We removed the batch ID from ustacks and cstacks 
             output, and the deprecated log likelihood fields from ustacks and cstacks. We also removed 
             the chromosome/bp/strand fields as they are no longer used in these files.
    Feature: Renamed gstacks output files that represent the new components of the catalog:
               gstacks.fa.gz => catalog.fa.gz; gstacks.vcf.gz => catalog.calls
    Feature: Removed read length restrictions from ustacks/cstacks/sstacks core, reads/loci can vary in
             length throughout the pipeline.